// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseCommand alreadyUsedOption 1`] = `
{
  "charactersToDrop": 3,
  "suggestions": [
    {
      "allNames": [
        "--bug-report",
      ],
      "description": "Display system information for bug report",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--bug-report",
      "priority": 50,
      "type": undefined,
    },
  ],
}
`;

exports[`parseCommand alreadyUsedSuggestion 1`] = `undefined`;

exports[`parseCommand command 1`] = `
{
  "charactersToDrop": 3,
  "suggestions": [
    {
      "allNames": [
        "stage",
      ],
      "description": "Add file contents to the staging area",
      "icon": "📦",
      "insertValue": undefined,
      "name": "stage",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "status",
      ],
      "description": "Show the working tree status",
      "icon": "📦",
      "insertValue": undefined,
      "name": "status",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "stash",
      ],
      "description": "Temporarily stores all the modified tracked files",
      "icon": "📦",
      "insertValue": undefined,
      "name": "stash",
      "priority": 50,
      "type": undefined,
    },
  ],
}
`;

exports[`parseCommand completePrefixFilter 1`] = `
{
  "charactersToDrop": 4,
  "suggestions": [
    {
      "allNames": [
        "status",
      ],
      "description": "Show the working tree status",
      "icon": "📦",
      "insertValue": undefined,
      "name": "status",
      "priority": 50,
      "type": undefined,
    },
  ],
}
`;

exports[`parseCommand completedOptionWithArg 1`] = `
{
  "charactersToDrop": 0,
  "suggestions": [
    {
      "allNames": [
        "--artifact-server-path",
      ],
      "description": "Defines the path where the artifact server stores uploads and retrieves downloads from. If not specified the artifact server will not start",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--artifact-server-path",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "--artifact-server-port",
      ],
      "description": "Defines the port where the artifact server listens (will only bind to localhost)",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--artifact-server-port",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "--container-architecture",
      ],
      "description": "Architecture which should be used to run containers, e.g.: linux/amd64. If not specified, will use host default architecture. Requires Docker server API Version 1.41+. Ignored on earlier Docker server platforms",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--container-architecture",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "--container-daemon-socket",
      ],
      "description": "Path to Docker daemon socket which will be mounted to containers",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--container-daemon-socket",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "--directory",
        "-C",
      ],
      "description": "Working directory",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--directory",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "--dryrun",
        "-n",
      ],
      "description": "Dryrun mode",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--dryrun",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "--env-file",
      ],
      "description": "Environment file to read and use as env in the containers",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--env-file",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "--github-instance",
      ],
      "description": "GitHub instance to use. Don't use this if you are not using GitHub Enterprise Server",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--github-instance",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "--insecure-secrets",
      ],
      "description": "NOT RECOMMENDED! Doesn't hide secrets while printing logs",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--insecure-secrets",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "--json",
      ],
      "description": "Output logs in json format",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--json",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "--no-recurse",
      ],
      "description": "Flag to disable running workflows from subdirectories of specified path in '--workflows'/'-W' flag",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--no-recurse",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "--no-skip-checkout",
      ],
      "description": "Do not skip actions/checkout",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--no-skip-checkout",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "--quiet",
        "-q",
      ],
      "description": "Disable logging of output from steps",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--quiet",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "--secret-file",
      ],
      "description": "File with list of secrets to read from (e.g. --secret-file .secrets)",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--secret-file",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "--verbose",
        "-v",
      ],
      "description": "Verbose output",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--verbose",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "--workflows",
        "-W",
      ],
      "description": "Path to workflow file(s)",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--workflows",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "--help",
        "-h",
      ],
      "description": "Display help",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--help",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "--no-descriptions",
      ],
      "description": "Disable completion descriptions",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--no-descriptions",
      "priority": 50,
      "type": undefined,
    },
  ],
}
`;

exports[`parseCommand emptySuggestions 1`] = `undefined`;

exports[`parseCommand exclusiveOnOption 1`] = `
{
  "charactersToDrop": 4,
  "suggestions": [
    {
      "allNames": [
        "--nobreak",
      ],
      "description": "Print a newline between matches in different files. Enabled by default",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--nobreak",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "--nocolor",
      ],
      "description": "Don't print color codes in results",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--nocolor",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "--nofilename",
      ],
      "description": "Don't print file names",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--nofilename",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "--nofollow",
      ],
      "description": "Don't follow symlinks",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--nofollow",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "--nogroup",
      ],
      "description": "Refrains from lumping matches in the same file together, and instead places the filename at the start of each match line",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--nogroup",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "--noheading",
      ],
      "description": "Don't print filenames above matching contents",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--noheading",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "--nommap",
      ],
      "description": "Don't use of memory-mapped I/O. Defaults to true on platforms where mmap() is faster than read(). (All but macOS.)",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--nommap",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "--nomultiline",
      ],
      "description": "Don't match regexes across newlines",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--nomultiline",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "-n",
        "--norecurse",
      ],
      "description": "Don't recurse into directories",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--norecurse",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "--nonumbers",
      ],
      "description": "Don't print line numbers",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--nonumbers",
      "priority": 50,
      "type": undefined,
    },
  ],
}
`;

exports[`parseCommand fullyTypedSuggestion 1`] = `
{
  "charactersToDrop": 2,
  "suggestions": [
    {
      "allNames": [
        "-W",
      ],
      "description": "Display whiteouts when scanning directories.  (-S) flag)",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "-W",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "-w",
      ],
      "description": "Force raw printing of non-printable characters.  This is the default when output is not to a terminal",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "-w",
      "priority": 50,
      "type": undefined,
    },
  ],
}
`;

exports[`parseCommand generatorUsingPartialInput 1`] = `
{
  "charactersToDrop": 27,
  "suggestions": [
    {
      "allNames": [
        "Microsoft.Azure.WebJobs.Core",
      ],
      "description": "This package provides the core Types and Attribute definitions for the WebJobs SDK. For more information, please visit https://go.microsoft.com/fwlink/?linkid=2279708.",
      "icon": "📀",
      "insertValue": "Microsoft.Azure.WebJobs.Core",
      "name": "Microsoft.Azure.WebJobs.Core",
      "priority": 60,
      "type": undefined,
    },
  ],
}
`;

exports[`parseCommand loadSpec 1`] = `
{
  "charactersToDrop": 3,
  "suggestions": [
    {
      "allNames": [
        "add-tags-to-certificate",
      ],
      "description": "Adds one or more tags to an ACM certificate. Tags are labels that you can use to identify and organize your Amazon Web Services resources. Each tag consists of a key and an optional value. You specify the certificate on input by its Amazon Resource Name (ARN). You specify the tag by using a key-value pair.  You can apply a tag to just one certificate if you want to identify a specific characteristic of that certificate, or you can apply the same tag to multiple certificates if you want to filter for a common relationship among those certificates. Similarly, you can apply the same tag to multiple resources if you want to specify a relationship among those resources. For example, you can add the same tag to an ACM certificate and an Elastic Load Balancing load balancer to indicate that they are both used by the same website. For more information, see Tagging ACM certificates.  To remove one or more tags, use the RemoveTagsFromCertificate action. To view all of the tags that have been applied to the certificate, use the ListTagsForCertificate action",
      "icon": "📦",
      "insertValue": undefined,
      "name": "add-tags-to-certificate",
      "priority": 50,
      "type": undefined,
    },
  ],
}
`;

exports[`parseCommand noArgsArgumentGiven 1`] = `
{
  "charactersToDrop": 0,
  "suggestions": [
    {
      "allNames": [
        "--analyzer-output",
      ],
      "description": "Static analyzer report output format",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--analyzer-output",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "--analyze",
      ],
      "description": "Run the static analyzer",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "--analyze",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "-arcmt-migrate-emit-errors",
      ],
      "description": "Emit ARC errors even if the migrator can fix them",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "-arcmt-migrate-emit-errors",
      "priority": 50,
      "type": undefined,
    },
  ],
}
`;

exports[`parseCommand noOptionsSuggestedDuringVariadicArg 1`] = `undefined`;

exports[`parseCommand optionsSuggestedAfterVariadicArg 1`] = `
{
  "argumentDescription": undefined,
  "charactersToDrop": 2,
  "suggestions": [
    {
      "allNames": [
        "package-lock.json",
      ],
      "description": undefined,
      "icon": "📄",
      "insertValue": "package-lock.json",
      "name": "package-lock.json",
      "priority": 55,
      "type": "file",
    },
    {
      "allNames": [
        "-L",
      ],
      "description": "Follow all symbolic links to final target and list the file or directory the link references rather than the link itself.  This option cancels the -P option",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "-L",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "-l",
      ],
      "description": "(The lowercase letter \`\`ell''.)  List in long format.  (See below.)  A total sum for all the file sizes is output on a line before the long listing",
      "icon": "🔗",
      "insertValue": undefined,
      "name": "-l",
      "priority": 50,
      "type": undefined,
    },
  ],
}
`;

exports[`parseCommand partialPrefixFilter 1`] = `
{
  "charactersToDrop": 3,
  "suggestions": [
    {
      "allNames": [
        "stage",
      ],
      "description": "Add file contents to the staging area",
      "icon": "📦",
      "insertValue": undefined,
      "name": "stage",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "status",
      ],
      "description": "Show the working tree status",
      "icon": "📦",
      "insertValue": undefined,
      "name": "status",
      "priority": 50,
      "type": undefined,
    },
    {
      "allNames": [
        "stash",
      ],
      "description": "Temporarily stores all the modified tracked files",
      "icon": "📦",
      "insertValue": undefined,
      "name": "stash",
      "priority": 50,
      "type": undefined,
    },
  ],
}
`;

exports[`parseCommand pathNestedSuggestion 1`] = `
{
  "charactersToDrop": 12,
  "suggestions": [
    {
      "allNames": [
        "workflows",
      ],
      "description": undefined,
      "icon": "📁",
      "insertValue": ".github/workflows/",
      "name": "workflows",
      "priority": 55,
      "type": "folder",
    },
  ],
}
`;

exports[`parseCommand pathSuggestion 1`] = `
{
  "charactersToDrop": 3,
  "suggestions": [
    {
      "allNames": [
        "shell",
      ],
      "description": undefined,
      "icon": "📁",
      "insertValue": "shell/",
      "name": "shell",
      "priority": 55,
      "type": "folder",
    },
  ],
}
`;

exports[`parseCommand pathWithFileFilteredSuggestion 1`] = `
{
  "charactersToDrop": 23,
  "suggestions": [
    {
      "allNames": [
        "shellIntegration.bash",
      ],
      "description": undefined,
      "icon": "📄",
      "insertValue": "shell/shellIntegration.bash",
      "name": "shellIntegration.bash",
      "priority": 55,
      "type": "file",
    },
  ],
}
`;

exports[`parseCommand pathWithFileSuggestion 1`] = `
{
  "charactersToDrop": 6,
  "suggestions": [
    {
      "allNames": [
        "bash-preexec.sh",
      ],
      "description": undefined,
      "icon": "📄",
      "insertValue": "shell/bash-preexec.sh",
      "name": "bash-preexec.sh",
      "priority": 55,
      "type": "file",
    },
  ],
}
`;

exports[`parseCommand provideFileSuggestion 1`] = `
{
  "charactersToDrop": 4,
  "suggestions": [
    {
      "allNames": [
        "README.md",
      ],
      "description": undefined,
      "icon": "📄",
      "insertValue": "README.md",
      "name": "README.md",
      "priority": 55,
      "type": "file",
    },
  ],
}
`;

exports[`parseCommand provideFolderSuggestion 1`] = `
{
  "charactersToDrop": 2,
  "suggestions": [
    {
      "allNames": [
        "src",
      ],
      "description": undefined,
      "icon": "📁",
      "insertValue": "src/",
      "name": "src",
      "priority": 55,
      "type": "folder",
    },
  ],
}
`;

exports[`parseCommand providedArgDescription 1`] = `
{
  "argumentDescription": "actor",
  "charactersToDrop": 0,
  "suggestions": [],
}
`;

exports[`parseCommand providedSuggestion 1`] = `
{
  "argumentDescription": "Shell to generate completions for",
  "charactersToDrop": 0,
  "suggestions": [
    {
      "allNames": [
        "zsh",
      ],
      "description": undefined,
      "icon": "📀",
      "insertValue": undefined,
      "name": "zsh",
      "priority": 50,
      "type": undefined,
    },
  ],
}
`;
